--- a/.github/workflows/ai-pr-reviewer.yml
+++ b/.github/workflows/ai-pr-reviewer.yml
@@ -14,6 +14,10 @@ jobs:
   review:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4       # <-- 添加这个步骤就行了
+        with:
+          fetch-depth: 0                # <-- 重要，确保所有文件历史都被checkout下来
+
       - uses: coderabbitai/ai-pr-reviewer@1.16.2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
